--- a/example/lib/languages/ar.json
+++ b/example/lib/languages/ar.json
@@ -131,6 +131,15 @@
   "pagination.of": "من",
   "pagination.entries": "المدخلات",
   "sidebar.paginationExample": "مثال الترقيم",
+  "sidebar.navigation": "التنقل",
+  "sidebar.webExamples": "أمثلة الويب",
+  "sidebar.databaseExamples": "أمثلة قواعد البيانات",
+  "sidebar.developmentTools": "أدوات التطوير",
+  "sidebar.debugTesting": "التصحيح والاختبار",
+  "sidebar.freeModelDbExample": "مثال نموذج قاعدة البيانات المجاني",
+  "sidebar.mysqlExample": "مثال MySQL",
+  "sidebar.htmlerExample": "مثال Htmler",
+  "sidebar.swaggerExample": "مثال Swagger",
   "project.contributing": "المساهمة",
   "project.documentation": "التوثيق",
   "project.github": "GitHub",
