--- a/example/lib/languages/cs.json
+++ b/example/lib/languages/cs.json
@@ -131,6 +131,15 @@
   "pagination.of": "z",
   "pagination.entries": "záznamů",
   "sidebar.paginationExample": "Příklad stránkování",
+  "sidebar.navigation": "Navigace",
+  "sidebar.webExamples": "Webové příklady",
+  "sidebar.databaseExamples": "Příklady databází",
+  "sidebar.developmentTools": "Vývojové nástroje",
+  "sidebar.debugTesting": "Ladění a testování",
+  "sidebar.freeModelDbExample": "Příklad volného DB modelu",
+  "sidebar.mysqlExample": "Příklad MySQL",
+  "sidebar.htmlerExample": "Příklad Htmler",
+  "sidebar.swaggerExample": "Příklad Swagger",
   "project.contributing": "Přispívání",
   "project.documentation": "Dokumentace",
   "project.github": "GitHub",
