--- a/example/lib/languages/da.json
+++ b/example/lib/languages/da.json
@@ -131,6 +131,15 @@
   "pagination.of": "af",
   "pagination.entries": "poster",
   "sidebar.paginationExample": "Paginering eksempel",
+  "sidebar.navigation": "Navigation",
+  "sidebar.webExamples": "Web eksempler",
+  "sidebar.databaseExamples": "Database eksempler",
+  "sidebar.developmentTools": "Udviklingsværktøjer",
+  "sidebar.debugTesting": "Debug og test",
+  "sidebar.freeModelDbExample": "Fri DB model eksempel",
+  "sidebar.mysqlExample": "MySQL eksempel",
+  "sidebar.htmlerExample": "Htmler eksempel",
+  "sidebar.swaggerExample": "Swagger eksempel",
   "project.contributing": "Bidrag",
   "project.documentation": "Dokumentation",
   "project.github": "GitHub",
