--- a/example/lib/languages/de.json
+++ b/example/lib/languages/de.json
@@ -131,6 +131,15 @@
   "pagination.of": "von",
   "pagination.entries": "Einträge",
   "sidebar.paginationExample": "Paginierungsbeispiel",
+  "sidebar.navigation": "Navigation",
+  "sidebar.webExamples": "Web-Beispiele",
+  "sidebar.databaseExamples": "Datenbank-Beispiele",
+  "sidebar.developmentTools": "Entwicklungstools",
+  "sidebar.debugTesting": "Debugging & Testen",
+  "sidebar.freeModelDbExample": "Freies DB-Modell Beispiel",
+  "sidebar.mysqlExample": "MySQL Beispiel",
+  "sidebar.htmlerExample": "Htmler Beispiel",
+  "sidebar.swaggerExample": "Swagger Beispiel",
   "project.contributing": "Mitwirken",
   "project.documentation": "Dokumentation",
   "project.github": "GitHub",
