--- a/example/lib/languages/en.json
+++ b/example/lib/languages/en.json
@@ -131,6 +131,15 @@
   "pagination.of": "of",
   "pagination.entries": "entries",
   "sidebar.paginationExample": "Pagination Example",
+  "sidebar.navigation": "Navigation",
+  "sidebar.webExamples": "Web Examples",
+  "sidebar.databaseExamples": "Database Examples",
+  "sidebar.developmentTools": "Development Tools",
+  "sidebar.debugTesting": "Debug & Testing",
+  "sidebar.freeModelDbExample": "Example Free model DB",
+  "sidebar.mysqlExample": "MySQL Example",
+  "sidebar.htmlerExample": "Htmler example",
+  "sidebar.swaggerExample": "Swagger example",
   "project.contributing": "Contributing",
   "project.documentation": "Documentation",
   "project.github": "GitHub",
