--- a/example/lib/languages/es.json
+++ b/example/lib/languages/es.json
@@ -131,6 +131,15 @@
   "pagination.of": "de",
   "pagination.entries": "entradas",
   "sidebar.paginationExample": "Ejemplo de paginación",
+  "sidebar.navigation": "Navegación",
+  "sidebar.webExamples": "Ejemplos Web",
+  "sidebar.databaseExamples": "Ejemplos de Base de Datos",
+  "sidebar.developmentTools": "Herramientas de Desarrollo",
+  "sidebar.debugTesting": "Depuración y Pruebas",
+  "sidebar.freeModelDbExample": "Ejemplo de Modelo DB Libre",
+  "sidebar.mysqlExample": "Ejemplo MySQL",
+  "sidebar.htmlerExample": "Ejemplo Htmler",
+  "sidebar.swaggerExample": "Ejemplo Swagger",
   "project.contributing": "Contribuir",
   "project.documentation": "Documentación",
   "project.github": "GitHub",
