--- a/example/lib/languages/fa.json
+++ b/example/lib/languages/fa.json
@@ -131,6 +131,15 @@
   "pagination.of": "از",
   "pagination.entries": "رکوردها",
   "sidebar.paginationExample": "مثال صفحه‌بندی",
+  "sidebar.navigation": "ناوبری",
+  "sidebar.webExamples": "نمونه‌های وب",
+  "sidebar.databaseExamples": "نمونه‌های پایگاه داده",
+  "sidebar.developmentTools": "ابزارهای توسعه",
+  "sidebar.debugTesting": "اشکال‌زدایی و آزمایش",
+  "sidebar.freeModelDbExample": "نمونه مدل آزاد پایگاه داده",
+  "sidebar.mysqlExample": "نمونه MySQL",
+  "sidebar.htmlerExample": "نمونه Htmler",
+  "sidebar.swaggerExample": "نمونه Swagger",
   "project.contributing": "مشارکت",
   "project.documentation": "مستندات",
   "project.github": "گیت‌هاب",
