--- a/example/lib/languages/fi.json
+++ b/example/lib/languages/fi.json
@@ -131,6 +131,15 @@
   "pagination.of": "/",
   "pagination.entries": "merkintää",
   "sidebar.paginationExample": "Sivutus esimerkki",
+  "sidebar.navigation": "Navigointi",
+  "sidebar.webExamples": "Web-esimerkit",
+  "sidebar.databaseExamples": "Tietokanta-esimerkit",
+  "sidebar.developmentTools": "Kehitystyökalut",
+  "sidebar.debugTesting": "Debuggaus ja testaus",
+  "sidebar.freeModelDbExample": "Vapaa DB-malli esimerkki",
+  "sidebar.mysqlExample": "MySQL esimerkki",
+  "sidebar.htmlerExample": "Htmler esimerkki",
+  "sidebar.swaggerExample": "Swagger esimerkki",
   "project.contributing": "Osallistuminen",
   "project.documentation": "Dokumentaatio",
   "project.github": "GitHub",
