--- a/example/lib/languages/fr.json
+++ b/example/lib/languages/fr.json
@@ -131,6 +131,15 @@
   "pagination.of": "sur",
   "pagination.entries": "entrées",
   "sidebar.paginationExample": "Exemple de pagination",
+  "sidebar.navigation": "Navigation",
+  "sidebar.webExamples": "Exemples Web",
+  "sidebar.databaseExamples": "Exemples de Base de Données",
+  "sidebar.developmentTools": "Outils de Développement",
+  "sidebar.debugTesting": "Débogage et Tests",
+  "sidebar.freeModelDbExample": "Exemple de Modèle DB Libre",
+  "sidebar.mysqlExample": "Exemple MySQL",
+  "sidebar.htmlerExample": "Exemple Htmler",
+  "sidebar.swaggerExample": "Exemple Swagger",
   "project.contributing": "Contribuer",
   "project.documentation": "Documentation",
   "project.github": "GitHub",
