--- a/example/lib/languages/he.json
+++ b/example/lib/languages/he.json
@@ -131,6 +131,15 @@
   "pagination.of": "מתוך",
   "pagination.entries": "רשומות",
   "sidebar.paginationExample": "דוגמה לעימוד",
+  "sidebar.navigation": "ניווט",
+  "sidebar.webExamples": "דוגמאות אינטרנט",
+  "sidebar.databaseExamples": "דוגמאות מסד נתונים",
+  "sidebar.developmentTools": "כלי פיתוח",
+  "sidebar.debugTesting": "ניפוי באגים ובדיקות",
+  "sidebar.freeModelDbExample": "דוגמה למודל DB חופשי",
+  "sidebar.mysqlExample": "דוגמה MySQL",
+  "sidebar.htmlerExample": "דוגמה Htmler",
+  "sidebar.swaggerExample": "דוגמה Swagger",
   "project.contributing": "תרומה",
   "project.documentation": "תיעוד",
   "project.github": "GitHub",
