--- a/example/lib/languages/hi.json
+++ b/example/lib/languages/hi.json
@@ -131,6 +131,15 @@
   "pagination.of": "का",
   "pagination.entries": "प्रविष्टियां",
   "sidebar.paginationExample": "पेजिनेशन उदाहरण",
+  "sidebar.navigation": "नेवीगेशन",
+  "sidebar.webExamples": "वेब उदाहरण",
+  "sidebar.databaseExamples": "डेटाबेस उदाहरण",
+  "sidebar.developmentTools": "विकास उपकरण",
+  "sidebar.debugTesting": "डिबगिंग और परीक्षण",
+  "sidebar.freeModelDbExample": "मुफ्त मॉडल DB उदाहरण",
+  "sidebar.mysqlExample": "MySQL उदाहरण",
+  "sidebar.htmlerExample": "Htmler उदाहरण",
+  "sidebar.swaggerExample": "Swagger उदाहरण",
   "project.contributing": "योगदान",
   "project.documentation": "दस्तावेज़ीकरण",
   "project.github": "GitHub",
