--- a/example/lib/languages/it.json
+++ b/example/lib/languages/it.json
@@ -131,6 +131,15 @@
   "pagination.of": "di",
   "pagination.entries": "voci",
   "sidebar.paginationExample": "Esempio di paginazione",
+  "sidebar.navigation": "Navigazione",
+  "sidebar.webExamples": "Esempi Web",
+  "sidebar.databaseExamples": "Esempi Database",
+  "sidebar.developmentTools": "Strumenti di Sviluppo",
+  "sidebar.debugTesting": "Debug e Test",
+  "sidebar.freeModelDbExample": "Esempio Modello DB Libero",
+  "sidebar.mysqlExample": "Esempio MySQL",
+  "sidebar.htmlerExample": "Esempio Htmler",
+  "sidebar.swaggerExample": "Esempio Swagger",
   "project.contributing": "Contribuire",
   "project.documentation": "Documentazione",
   "project.github": "GitHub",
