--- a/example/lib/languages/ja.json
+++ b/example/lib/languages/ja.json
@@ -131,6 +131,15 @@
   "pagination.of": "の",
   "pagination.entries": "エントリ",
   "sidebar.paginationExample": "ページネーションの例",
+  "sidebar.navigation": "ナビゲーション",
+  "sidebar.webExamples": "Webの例",
+  "sidebar.databaseExamples": "データベースの例",
+  "sidebar.developmentTools": "開発ツール",
+  "sidebar.debugTesting": "デバッグとテスト",
+  "sidebar.freeModelDbExample": "フリーモデルDBの例",
+  "sidebar.mysqlExample": "MySQLの例",
+  "sidebar.htmlerExample": "Htmlerの例",
+  "sidebar.swaggerExample": "Swaggerの例",
   "project.contributing": "貢献",
   "project.documentation": "ドキュメント",
   "project.github": "GitHub",
