--- a/example/lib/languages/ko.json
+++ b/example/lib/languages/ko.json
@@ -131,6 +131,15 @@
   "pagination.of": "의",
   "pagination.entries": "항목",
   "sidebar.paginationExample": "페이지네이션 예제",
+  "sidebar.navigation": "네비게이션",
+  "sidebar.webExamples": "웹 예제",
+  "sidebar.databaseExamples": "데이터베이스 예제",
+  "sidebar.developmentTools": "개발 도구",
+  "sidebar.debugTesting": "디버깅 및 테스트",
+  "sidebar.freeModelDbExample": "자유 모델 DB 예제",
+  "sidebar.mysqlExample": "MySQL 예제",
+  "sidebar.htmlerExample": "Htmler 예제",
+  "sidebar.swaggerExample": "Swagger 예제",
   "project.contributing": "기여",
   "project.documentation": "문서",
   "project.github": "GitHub",
