--- a/example/lib/languages/nl.json
+++ b/example/lib/languages/nl.json
@@ -131,6 +131,15 @@
   "pagination.of": "van",
   "pagination.entries": "vermeldingen",
   "sidebar.paginationExample": "Paginatie Voorbeeld",
+  "sidebar.navigation": "Navigatie",
+  "sidebar.webExamples": "Web Voorbeelden",
+  "sidebar.databaseExamples": "Database Voorbeelden",
+  "sidebar.developmentTools": "Ontwikkelingstools",
+  "sidebar.debugTesting": "Debuggen & Testen",
+  "sidebar.freeModelDbExample": "Vrij DB Model Voorbeeld",
+  "sidebar.mysqlExample": "MySQL Voorbeeld",
+  "sidebar.htmlerExample": "Htmler Voorbeeld",
+  "sidebar.swaggerExample": "Swagger Voorbeeld",
   "project.contributing": "Bijdragen",
   "project.documentation": "Documentatie",
   "project.github": "GitHub",
