--- a/example/lib/languages/no.json
+++ b/example/lib/languages/no.json
@@ -131,6 +131,15 @@
   "pagination.of": "av",
   "pagination.entries": "oppføringer",
   "sidebar.paginationExample": "Sideinndeling eksempel",
+  "sidebar.navigation": "Navigasjon",
+  "sidebar.webExamples": "Web eksempler",
+  "sidebar.databaseExamples": "Database eksempler",
+  "sidebar.developmentTools": "Utviklingsverktøy",
+  "sidebar.debugTesting": "Feilsøking og testing",
+  "sidebar.freeModelDbExample": "Gratis DB-modell eksempel",
+  "sidebar.mysqlExample": "MySQL eksempel",
+  "sidebar.htmlerExample": "Htmler eksempel",
+  "sidebar.swaggerExample": "Swagger eksempel",
   "project.contributing": "Bidragande",
   "project.documentation": "Dokumentasjon",
   "project.github": "GitHub",
