--- a/example/lib/languages/pl.json
+++ b/example/lib/languages/pl.json
@@ -131,6 +131,15 @@
   "pagination.of": "z",
   "pagination.entries": "wpisów",
   "sidebar.paginationExample": "Przykład paginacji",
+  "sidebar.navigation": "Nawigacja",
+  "sidebar.webExamples": "Przykłady internetowe",
+  "sidebar.databaseExamples": "Przykłady baz danych",
+  "sidebar.developmentTools": "Narzędzia deweloperskie",
+  "sidebar.debugTesting": "Debugowanie i testowanie",
+  "sidebar.freeModelDbExample": "Przykład wolnego modelu bazy danych",
+  "sidebar.mysqlExample": "Przykład MySQL",
+  "sidebar.htmlerExample": "Przykład Htmler",
+  "sidebar.swaggerExample": "Przykład Swagger",
   "project.contributing": "Współpraca",
   "project.documentation": "Dokumentacja",
   "project.github": "GitHub",
