--- a/example/lib/languages/pt.json
+++ b/example/lib/languages/pt.json
@@ -131,6 +131,15 @@
   "pagination.of": "de",
   "pagination.entries": "entradas",
   "sidebar.paginationExample": "Exemplo de Paginação",
+  "sidebar.navigation": "Navegação",
+  "sidebar.webExamples": "Exemplos Web",
+  "sidebar.databaseExamples": "Exemplos de Base de Dados",
+  "sidebar.developmentTools": "Ferramentas de Desenvolvimento",
+  "sidebar.debugTesting": "Depuração e Testes",
+  "sidebar.freeModelDbExample": "Exemplo de Modelo DB Livre",
+  "sidebar.mysqlExample": "Exemplo MySQL",
+  "sidebar.htmlerExample": "Exemplo Htmler",
+  "sidebar.swaggerExample": "Exemplo Swagger",
   "project.contributing": "Contribuindo",
   "project.documentation": "Documentação",
   "project.github": "GitHub",
