--- a/example/lib/languages/ru.json
+++ b/example/lib/languages/ru.json
@@ -131,6 +131,15 @@
   "pagination.of": "из",
   "pagination.entries": "записей",
   "sidebar.paginationExample": "Пример пагинации",
+  "sidebar.navigation": "Навигация",
+  "sidebar.webExamples": "Веб-примеры",
+  "sidebar.databaseExamples": "Примеры баз данных",
+  "sidebar.developmentTools": "Инструменты разработки",
+  "sidebar.debugTesting": "Отладка и тестирование",
+  "sidebar.freeModelDbExample": "Пример свободной модели БД",
+  "sidebar.mysqlExample": "Пример MySQL",
+  "sidebar.htmlerExample": "Пример Htmler",
+  "sidebar.swaggerExample": "Пример Swagger",
   "project.contributing": "Вклад",
   "project.documentation": "Документация",
   "project.github": "GitHub",
