--- a/example/lib/languages/sv.json
+++ b/example/lib/languages/sv.json
@@ -131,6 +131,15 @@
   "pagination.of": "av",
   "pagination.entries": "poster",
   "sidebar.paginationExample": "Sidnumrering exempel",
+  "sidebar.navigation": "Navigation",
+  "sidebar.webExamples": "Webb exempel",
+  "sidebar.databaseExamples": "Databas exempel",
+  "sidebar.developmentTools": "Utvecklingsverktyg",
+  "sidebar.debugTesting": "Felsökning och testning",
+  "sidebar.freeModelDbExample": "Fritt DB-modell exempel",
+  "sidebar.mysqlExample": "MySQL exempel",
+  "sidebar.htmlerExample": "Htmler exempel",
+  "sidebar.swaggerExample": "Swagger exempel",
   "project.contributing": "Bidragande",
   "project.documentation": "Dokumentation",
   "project.github": "GitHub",
