--- a/example/lib/languages/th.json
+++ b/example/lib/languages/th.json
@@ -131,6 +131,15 @@
   "pagination.of": "จาก",
   "pagination.entries": "รายการ",
   "sidebar.paginationExample": "ตัวอย่างการแบ่งหน้า",
+  "sidebar.navigation": "การนำทาง",
+  "sidebar.webExamples": "ตัวอย่างเว็บ",
+  "sidebar.databaseExamples": "ตัวอย่างฐานข้อมูล",
+  "sidebar.developmentTools": "เครื่องมือพัฒนา",
+  "sidebar.debugTesting": "การดีบักและทดสอบ",
+  "sidebar.freeModelDbExample": "ตัวอย่างโมเดล DB ฟรี",
+  "sidebar.mysqlExample": "ตัวอย่าง MySQL",
+  "sidebar.htmlerExample": "ตัวอย่าง Htmler",
+  "sidebar.swaggerExample": "ตัวอย่าง Swagger",
   "project.contributing": "การมีส่วนร่วม",
   "project.documentation": "เอกสาร",
   "project.github": "GitHub",
