--- a/example/lib/languages/tr.json
+++ b/example/lib/languages/tr.json
@@ -131,6 +131,15 @@
   "pagination.of": "nın",
   "pagination.entries": "giriş",
   "sidebar.paginationExample": "Paginasyon Örneği",
+  "sidebar.navigation": "Navigasyon",
+  "sidebar.webExamples": "Web Örnekleri",
+  "sidebar.databaseExamples": "Veritabanı Örnekleri",
+  "sidebar.developmentTools": "Geliştirme Araçları",
+  "sidebar.debugTesting": "Hata Ayıklama ve Test",
+  "sidebar.freeModelDbExample": "Serbest Model DB Örneği",
+  "sidebar.mysqlExample": "MySQL Örneği",
+  "sidebar.htmlerExample": "Htmler Örneği",
+  "sidebar.swaggerExample": "Swagger Örneği",
   "project.contributing": "Katkıda Bulunma",
   "project.documentation": "Belgeler",
   "project.github": "GitHub",
