--- a/example/lib/languages/zh.json
+++ b/example/lib/languages/zh.json
@@ -128,13 +128,22 @@
   "database.table.header.action": "Action",
   "database.table.input.placeholder.title": "Enter Title",
   "database.table.button.add": "Add",
-  "pagination.showing": "Showing",
-  "pagination.to": "to",
-  "pagination.of": "of",
-  "pagination.entries": "entries",
-  "sidebar.paginationExample": "Pagination Example",
-  "project.contributing": "Contributing",
-  "project.documentation": "Documentation",
+  "pagination.showing": "显示",
+  "pagination.to": "到",
+  "pagination.of": "共",
+  "pagination.entries": "条记录",
+  "sidebar.paginationExample": "分页示例",
+  "sidebar.navigation": "导航",
+  "sidebar.webExamples": "网页示例",
+  "sidebar.databaseExamples": "数据库示例",
+  "sidebar.developmentTools": "开发工具",
+  "sidebar.debugTesting": "调试和测试",
+  "sidebar.freeModelDbExample": "自由模型数据库示例",
+  "sidebar.mysqlExample": "MySQL 示例",
+  "sidebar.htmlerExample": "Htmler 示例",
+  "sidebar.swaggerExample": "Swagger 示例",
+  "project.contributing": "贡献",
+  "project.documentation": "文档",
   "project.github": "GitHub",
   "error.field.required": "This field is required",
   "error.field.email": "Invalid email address",
