--- a/doc/6.FormValidators.md
+++ b/doc/6.FormValidators.md
@@ -83,7 +83,7 @@ Future<String> exampleEmailSend() async {
       if (resSendEmail) {
         rq.addParam('sendEmailSuccess', 'Email sent successfully');
       } else {
-        rq.addParam('sendEmailFeiled', 'Email not sent');
+        rq.addParam('sendEmailFailed', 'Email not sent');
       }
     }
 
